--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.0.0",
     "@mui/material": "^5.6.2",
+    "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "cra-template": "1.1.2",
     "final-form": "^4.20.4",
     "react": "^17.0.2",
