--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.7",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
